# embedded-svc

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-dry-run.yml  publish.yml
src/: anyerror.rs  atomic_swap.rs  channel.rs  edge_config.rs  errors.rs  eth.rs  event_bus.rs  executor.rs  gfx.rs  ghota.rs  http.rs  httpd.rs  io.rs  ipv4.rs  lib.rs  log.rs  macros.rs  mqtt.rs  mutex.rs  nonblocking.rs  ota.rs  ping.rs  service.rs  signal.rs  storage.rs  strconv.rs  sys_time.rs  timer.rs  unblock.rs  unblocker.rs  utils.rs  wifi.rs  ws.rs
src/edge_config/: auth.rs  ota.rs  role.rs  wifi.rs
src/http/: client.rs  server.rs
src/http/server/: attr.rs  middleware.rs  registry.rs  session.rs
src/mqtt/: client.rs  client5.rs
src/utils/: anyerror.rs  asynch.rs  asyncify.rs  asyncs.rs  atomic_swap.rs  captive.rs  forever.rs  ghota.rs  http.rs  io.rs  json_io.rs  mqtt.rs  mutex.rs  nonblocking.rs  notification.rs  pinned_timer.rs  rest.rs  role.rs  zerocopy.rs
src/utils/asynch/: channel.rs  executor.rs  mpmc.rs  mutex.rs  select.rs  signal.rs  waker.rs
src/utils/asyncify/: event_bus.rs  mqtt.rs  timer.rs  ws.rs
src/utils/asyncify/mqtt/: client.rs
src/utils/asyncify/ws/: server.rs
src/utils/asyncs/: channel.rs  executor.rs  forever.rs  select.rs  signal.rs
src/utils/http/: server.rs
src/utils/nonblocking/: channel.rs  event_bus.rs  signal.rs  timer.rs
src/utils/nonblocking/mqtt/: client.rs
src/utils/nonblocking/ws/: server.rs
src/utils/rest/: auth.rs  captive.rs  ota.rs  role.rs  wifi.rs
src/ws/: server.rs
src/ws/server/: registry.rs
